instant - imac wendy

--- a/src/stylesheets/components/_hybrid.scss
+++ b/src/stylesheets/components/_hybrid.scss
@@ -1,16 +1,13 @@
 .head {
-  background-color: yellow;
+  top:-1%;
 }
 .body {
-  background-color: blue;
   z-index: 300;
-  top:0;
-  left: 34%;
-  width: 30%;
+  left:17%;
+  width: 64%;
+  top:-2%;
   position: absolute;
 }
 
 .legs {
-  background-color: #00d6b2;
-
 }
