--- a/src/stylesheets/components/_animal-list.scss
+++ b/src/stylesheets/components/_animal-list.scss
@@ -1,4 +1,7 @@
-.animals {
-  background-color: #232E5B;
+.game__animal {
+  background-color: rgb(228, 84, 80);
+}
 
+.animal {
+  -webkit-transform: translateZ(0);
 }
