animals in colors + name in colors

--- a/scss/_color.scss
+++ b/scss/_color.scss
@@ -1,1 +1,7 @@
-$beige: rgb(252, 250, 243);
+$beige: rgb(252,250,243);
+$blue: rgb(107,210,219);
+$orange: rgb(232,112,42);
+$pink: rgb(255,111,105);
+$pale-green: rgb(150,206,180);
+$dark-blue: rgb(12,69,125);
+$duck-green: rgb(45,88,103);
