--- a/scss/_hybrid.scss
+++ b/scss/_hybrid.scss
@@ -12,24 +12,27 @@
 h1.hybrid__name {
   font-family: 'fibre_vintagefibre_vintage';
   display: inline-block;
-  font-size: 30px;
+  font-size: 40px;
+  margin:0;
+  padding:0;
+  color: $beige;
 }
 
 @include media-breakpoint-up(sm) {
   h1.hybrid__name {
-    font-size: 50px;
+    font-size: 85px;
   }
 }
 
 @include media-breakpoint-up(md) {
   h1.hybrid__name {
-    font-size: 70px;
+    font-size: 100px;
   }
 }
 
 @include media-breakpoint-up(lg) {
   h1.hybrid__name {
-    font-size: 100px;
+    font-size: 130px;
   }
 }
 .animal__parts {
