sccs file ok + Footer component

--- a/scss/_color.scss
+++ b/scss/_color.scss
@@ -1,7 +1,5 @@
-$beige: rgb(252,250,243);
-$blue: rgb(107,210,219);
-$orange: rgb(232,112,42);
-$pink: rgb(255,111,105);
-$pale-green: rgb(150,206,180);
-$dark-blue: rgb(12,69,125);
-$duck-green: rgb(45,88,103);
+$beige: rgb(252, 250, 243);
+$pink: #d64d4d;
+$vert-d-eau: #bcd2d0;
+$dark-grey: #333333;
+$see-blue: #468499;
