--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,10 +16,10 @@ h3 {
 }
 
 .game {
-  overflow: auto;
+  overflow:hidden;
   display: flex;
   flex-direction: column;
-  background-color: $vert-d-eau;
+
 }
 
 .game--content {
@@ -48,9 +48,9 @@ h3 {
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
-    height: auto;
     flex-wrap: nowrap;
     width: 50vw;
+    height: 82vh;
     @include media-breakpoint-down(md) {
       width: 70vw;
     }
@@ -64,5 +64,8 @@ h3 {
   flex: 0 0 auto;
   height: 18vh;
   padding-top: 2%;
+  width:100vw;
+  z-index:1000;
+  background-color: $vert-d-eau;
 }
 
