--- a/scss/_hybrid.scss
+++ b/scss/_hybrid.scss
@@ -39,7 +39,7 @@ h1.hybrid__name {
 
 .game__hybrid {
   svg {
-    height: 100%;
+    height: 82vh;
     width: 100%;
     position: absolute;
   }
