scoll ios safari ok in portrait orientation

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@ body {
   overflow: hidden;
   margin: 0;
   padding: 0;
+  position: fixed;
 }
 
 h3 {
@@ -34,7 +35,6 @@ h3 {
   flex-wrap: wrap;
   overflow: hidden;
   .game__animal {
-
     flex: 1 1 auto;
     flex-wrap: nowrap;
     width: 50vw;
@@ -49,10 +49,9 @@ h3 {
       position: relative;
       top:0;
       overflow: scroll;
+      webkit-overflow-scrolling: touch;
       height: 82vh;
-      svg {
 
-      }
     }
   }
   .game__hybrid {
@@ -62,7 +61,6 @@ h3 {
     flex: 1 1 auto;
     flex-wrap: nowrap;
     width: 50vw;
-
     @include media-breakpoint-down(md) {
       width: 65vw;
     }
@@ -80,4 +78,14 @@ h3 {
   z-index:1000;
   background-color: $vert-d-eau;
   flex-shrink:0;
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0,0,0,.5);
+  -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
